# claude-prompt-generator

./: .dockerignore  Dockerfile  README.md  compose.yml  pyproject.toml
src/: .env_sample  ape.py  app.py  calibration.py  metaprompt.py  metaprompt.txt  optimize.py  requirements.txt  translate.py  translations.json
src/application/: soe_prompt.py
src/preflight/: check.py
