[tool.poetry]
name = "claude-prompt-generator"
version = "0.1.0"
description = ""
authors = ["Van Dong <thenullmastermind@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "1.0.1"
boto3 = "1.34.72"
gradio = "4.43.0"
gradio-client = "1.3.0"
ruff = "0.3.4"
scikit-learn = "1.5.2"
openai = "^1.53.0"
poetry-core = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
